--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/augustolallana/proyecto-primer-sprint/issues"
   },
-  "homepage": "https://github.com/augustolallana/proyecto-primer-sprint#readme"
+  "homepage": "https://github.com/augustolallana/proyecto-primer-sprint#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
+  }
 }
