--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Primer proyecto de sprints de Acámica: Programación Web Backend. Es una API para gestionar un restaurante llamado Deliah-Resto",
   "main": "index.js",
   "scripts": {
-    "run": "node index.js"
+    "server": "node index.js"
   },
   "repository": {
     "type": "git",
