--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/augustolallana/proyecto-primer-sprint#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^2.0.9",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6"
   }
